--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<link href="css/style.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 <html>
 <head>
     <title>Dr. Hemingway Test Website</title>
